# queryUI

./: .gitignore  README.md  pyproject.toml  queryUI.spec  requirements.txt
.github/workflows/: pyinstaller-windows.yml
queryUI/: __init__.py  __main__.py  app.py  options.py  utils.py
queryUI/frames/: base.py  buttons.py  entry.py  radio.py  results.py  status.py
