[tool.poetry]
name = "queryui"
version = "0.1.0"
description = ""
authors = ["NixonInnes <nixoninnes@echonet.io>"]

[tool.poetry.dependencies]
python = "^3.9"
tk = "^0.1.0"
requests = "^2.27.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
